# multiway

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  README.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  roadmap_item.md
.github/workflows/: ci.yml  pages.yml
atlas/: index.html  rule-001.html  rule-002.html  rule-003.html  rule-004.html  rule-005.html  rule-006.html  rule-007.html  rule-008.html  rule-009.html  rule-010.html  rule-011.html  rule-012.html  rule-013.html  rule-014.html  rule-015.html
docs/: LEMMA.md  THEORY.md
examples/: basic_evolution.rs  confluence_check.rs  custom_analysis.rs
src/: ascii.rs  atlas.rs  canon.rs  causal.rs  confluence.rs  det.rs  export.rs  hypergraph.rs  lib.rs  lint.rs  main.rs  matcher.rs  probe.rs  report.rs  rule.rs  rulespace.rs  scan.rs  stats.rs  store.rs  system.rs  teg.rs  wasm.rs
tests/: alloc_count.rs  ascii.rs  atlas.rs  atlas_html.rs  baseline.rs  canon.rs  cli.rs  confluence.rs  engine.rs  gallery.rs  golden.rs  incremental.rs  parallel.rs  playground.rs  probe.rs  prop_canon.rs  prop_engine.rs  prop_parser.rs  rulespace.rs  scan.rs  scan_golden.rs  stats.rs  store.rs  teg.rs  viewer.rs  wasm.rs
tests/common/: gen.rs  harness.rs  jsonck.rs  mod.rs  oracle.rs  prng.rs
tests/golden/: ascii_classic.txt  ascii_growth.txt  ascii_reversal.txt  ascii_terminating.txt  classic.json  classic.txt  growth.json  growth.txt  scan_tiny.json  scan_tiny.txt  ternary.json  ternary.txt
viewer/: atlas.html  template.html
