[package]
name = "multiway"
version = "0.2.0"
default-run = "multiway"
edition = "2021"
rust-version = "1.63"
description = "A multiway hypergraph rewriting engine with e-graph-style state sharing"
license = "MIT"
repository = "https://github.com/sjqtentacles/multiway"
readme = "README.md"
authors = ["sjqtentacles <programminglinguist@gmail.com>"]
keywords = ["hypergraph", "rewriting", "wolfram-model", "e-graph", "isomorphism"]
categories = ["science", "mathematics", "algorithms"]

[profile.release]
opt-level = 3

# The playground's .wasm build (C0): size-optimized, panic=abort (input-
# shaped failures are all caught pre-evolution; a trap = engine bug, and
# the page re-instantiates from cached bytes). Built via
#   cargo rustc --profile wasm --target wasm32-unknown-unknown --crate-type cdylib
# so the native targets and the 1.63 matrix never see this profile or a
# [lib] crate-type change (the wasm CI job runs on stable).
[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
